# PlayBack

./: .gitignore  CRYPTO.md  Dockerfile  NOTES.md  README.md  logo.kra
client/: .clang-format
client/3ds/: Makefile  main.c  sample.cfg
client/lib/: config.c  config.h  constants.h  crypto.c  crypto.h  murmur3.c  murmur3.h  regex.c  regex.h  syncer.c  syncer.h  tweetnacl.c  tweetnacl.h
client/unix/: Makefile  main.c  sample.cfg
client/vita/: Makefile  debugScreen.h  debugScreenFont.c  main.c  sample.cfg
client/vita/sce_sys/livearea/contents/: template.xml
server/: Cargo.toml  example_config.toml
server/src/: config.rs  crypto.rs  lib.rs  logs.rs  main.rs  opt.rs  parse.rs  run.rs
